--- a/index1.html
+++ b/index1.html
@@ -1,14 +1,29 @@
+<!-- this is an AngularJS View Template -->
 <html ng-app>
     <head>
         <!-- from Google Hosted Libraries -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+        <!-- this example doesn't work with versions 1.3.0 and newer -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.27/angular.min.js"></script>
+        <script lang="javascript">
+            
+            //we make an AngularJS controller right here in the template (we won't normally do this though)
+            function CostController($scope) {
+                $scope.cost = 1000.1;
+                $scope.tax = $scope.cost * 0.15;
+            }
+        </script>
     </head>
     <body>
-        Cost: <input type="text" ng-model="cost" placeholder="cost" />
-        <p>
-            <!-- the angular directive both associates with the cost model and
-                 uses a built-in formatting capability -->
-            This is your cost: {{cost|currency}}
-        </p>
+        <div ng-controller="CostController">
+            Cost: <input type="text" ng-model="cost" placeholder="cost" />
+            <p>
+                <!-- the angular directive both associates with the cost model and
+                uses a built-in formatting capability -->
+                This is your cost: {{cost|currency}}
+            </p>
+            <p>
+                This is your tax: {{cost|currency}}
+            </p>
+        </div>
     </body>
 </html>
