updated README.MD and index1.html

--- a/index1.html
+++ b/index1.html
@@ -48,6 +48,7 @@
             </p>
             <p ng-show="cc.total_bill">
                 This is your total: {{cc.total|currency}}
+                <button ng-click="add()">Add</button>
             </p>            
         </div>
     </body>
