--- a/index1.html
+++ b/index1.html
@@ -54,7 +54,8 @@
             <input type="checkbox" ng-model="cc.add_tax" />Add Tax
             <input type="checkbox" ng-model="cc.total_bill" />Show Total
             <p>
-                Cost: <input type="text" ng-model="cc.cost" placeholder="cost" />
+                Cost: <input type="text" ng-model="cc.cost" placeholder="cost" /><br/>
+                Shipping: <select ng-model="cc.shipping" ng-options="s.name for s in cc.shipping_options"></select>
             </p>
             <p>
                 <!-- the angular directive both associates with the cost model and
