--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
                 function ($scope) {
                     var cc = this;
                     cc.people = [
-                        {name:'Jack', phones:['806-555-1212', '806-555-1212']},
+                        {name:'Jack', phones:['806-555-1212', '806-555-5300']},
                         {name:'Jane', phones:['806-555-3232', '806-555-7878']},
                         {name:'Jill', phones:['804-867-5309', '806-555-2112']}
                     ];
@@ -23,9 +23,13 @@
     <body ng-controller="ContactsController as cc">
         <div ng-repeat="person in cc.people">
             {{person.name}}
-            <div ng-repeat="phone in person.phones">
-                {{phone}}
+            
+            <div style="margin-left:50px;">
+                <div ng-repeat="phone in person.phones">
+                    {{phone}}
+                </div>
             </div>
+            
         </div>
     </body>
 </html>
